Font update, Background update, Birthday Message Fix

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <header>
             <div class="header-inner-container">
                 <div class="header-text-container">
-                    <h1>COMSIC TECH EMPLOYEE DIRECTORY</h1>
+                    <h1>COSMIC TECH EMPLOYEE DIRECTORY</h1>
                 </div>
                 
                 <div class="search-container">
