--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
                 </div>
                 
                 <div class="search-container">
-                    <form action="#" method="get">
-                        <input type="search" id="search-input" class="search-input" placeholder="Search...">
-                        <input type="submit" value="&#x1F50D;" id="serach-submit" class="search-submit">
-                    </form>
+                    <!-- ======================
+                        Search markup Example:
+                        <form action="#" method="get">
+                            <input type="search" id="search-input" class="search-input" placeholder="Search...">
+                            <input type="submit" value="&#x1F50D;" id="serach-submit" class="search-submit">
+                        </form>
+                    ======================= -->
                 </div>
             </div>
         </header>
